--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 }
 .form {
   width: 30rem;
+  height: 30rem;
   background-color: white;
   padding: 3.125em;
   border-radius: 10px;
@@ -86,4 +87,18 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100%;
+}
+
+.toggle-outer{
+  background-color: grey;
+  width: 18rem;
+  height: 2.5rem;
+  margin-left: 39%;
+}
+
+.toggle-btn{
+  border: none;
+  position: relative;
+  width: 50%;
+  height: 100%;
 }
