--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,10 @@
     width: none;
   }
 }
-.form {
+
+.outerContainer{
   width: 30rem;
-  height: 30rem;
+  height: 40rem;
   background-color: white;
   padding: 3.125em;
   border-radius: 10px;
@@ -20,6 +21,14 @@
   flex-direction: column;
   align-items: center;
   box-shadow: 5px 5px 15px -1px rgba(0,0,0,0.75);
+}
+
+.form {
+  width: 30rem;
+  height: 40rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .signup {
@@ -91,10 +100,6 @@
   width: 20rem;
 }
 
-.container{
-  margin-left: 40%;
-}
-
 .toggle-outer{
   position: relative;
   width: 18rem;
@@ -124,7 +129,6 @@
 
 .ContentBox{
   display: flex;
-  margin-left: 28%;
   width: 39rem;
   height: 45rem;
   overflow: hidden;
