--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 90vh;
 }
 @media (max-width: 450px) {
   .form{
@@ -13,7 +12,7 @@
 
 .outerContainer{
   width: 30rem;
-  height: 40rem;
+  height: 38rem;
   background-color: white;
   padding: 3.125em;
   border-radius: 10px;
@@ -23,9 +22,13 @@
   box-shadow: 5px 5px 15px -1px rgba(0,0,0,0.75);
 }
 
+.container{
+  padding-bottom: 3rem;
+}
+
 .form {
   width: 30rem;
-  height: 40rem;
+  height: 30rem;
   display: flex;
   flex-direction: column;
   align-items: center;
