--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,41 @@
-.outerdiv{
+.outerdiv {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
+
 @media (max-width: 450px) {
-  .form{
+  .form {
     width: none;
+  }
+
+  html {
+    font-size: 50%;
+  }
+
+  .ContentBox{
+    height: 51rem !important;
+  }
+
+  .form span{
+    font-size: 2rem;
+  }
+
+  .form--submit{
+    width: 75% !important;
+  }
+
+  .toggle-outer{
+    height: 3.5rem !important;
+  }
+
+  .outerContainer {
+    height: 55rem !important;
   }
 }
 
-.outerContainer{
+.outerContainer {
   width: 30rem;
   height: 37rem;
   background-color: white;
@@ -19,10 +44,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 5px 5px 15px -1px rgba(0,0,0,0.75);
+  box-shadow: 5px 5px 15px -1px rgba(0, 0, 0, 0.75);
 }
 
-.container{
+.container {
   padding-bottom: 3rem;
 }
 
@@ -66,15 +91,16 @@
   align-items: center;
 }
 
-.form--marketing > input {
+.form--marketing>input {
   margin-right: 0.625em;
 }
 
-.form--marketing > label {
+.form--marketing>label {
   color: grey;
 }
 
-.checkbox, input[type="checkbox"] {
+.checkbox,
+input[type="checkbox"] {
   accent-color: rgb(39, 145, 193);
 }
 
@@ -97,13 +123,13 @@
   transition: 0.5s;
 }
 
-.buttons-div{
+.buttons-div {
   display: flex;
   justify-content: center;
   width: 20rem;
 }
 
-.toggle-outer{
+.toggle-outer {
   position: relative;
   width: 18rem;
   height: 2.5rem;
@@ -111,7 +137,7 @@
   box-shadow: 0 0 20px 9px #24d3ff3c;
 }
 
-.toggle-btn{
+.toggle-btn {
   border: none;
   position: relative;
   width: 50%;
@@ -120,7 +146,8 @@
   font-weight: 800;
   transition: .5s;
 }
-#btn{
+
+#btn {
   top: 0;
   position: absolute;
   height: 100%;
@@ -130,13 +157,14 @@
   border-radius: 30px;
 }
 
-.ContentBox{
+.ContentBox {
   display: flex;
   width: 39rem;
   height: 32rem;
   overflow: hidden;
 }
-.formContent{
+
+.formContent {
   position: relative;
   width: 100%;
 }
