--- a/src/index.css
+++ b/src/index.css
@@ -5,36 +5,6 @@
   flex-direction: column;
 }
 
-@media (max-width: 450px) {
-  .form {
-    width: none;
-  }
-
-  html {
-    font-size: 50%;
-  }
-
-  .ContentBox{
-    height: 51rem !important;
-  }
-
-  .form span{
-    font-size: 2rem;
-  }
-
-  .form--submit{
-    width: 75% !important;
-  }
-
-  .toggle-outer{
-    height: 3.5rem !important;
-  }
-
-  .outerContainer {
-    height: 55rem !important;
-  }
-}
-
 .outerContainer {
   width: 30rem;
   height: 37rem;
@@ -167,4 +137,35 @@ input[type="checkbox"] {
 .formContent {
   position: relative;
   width: 100%;
+}
+
+/* Media Queries for mobile  */
+@media (max-width: 450px) {
+  .form {
+    width: none;
+  }
+
+  html {
+    font-size: 50%;
+  }
+
+  .ContentBox{
+    height: 51rem !important;
+  }
+
+  .form span{
+    font-size: 2rem;
+  }
+
+  .form--submit{
+    width: 75% !important;
+  }
+
+  .toggle-outer{
+    height: 3.5rem !important;
+  }
+
+  .outerContainer {
+    height: 55rem !important;
+  }
 }
